Delete Working, Context Menu Working
Need to work out favorites

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,9 +17,12 @@
     <string name="thursday_check_label">Thursday</string>
     <string name="friday_check_label">Friday</string>
     <string name="saturday_check_label">Saturday</string>
+    <string name="signup_label">Don\'t have an account? Sign up!</string>
+    <string name="recover_password_label">Forgot your password?</string>
 
     <!--ContentDescriptions-->
     <string name="content_desc_restaurant_image">Restaurant Image</string>
+    <string name="content_desc_background_image">Background Image</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
@@ -77,6 +80,9 @@
     <!--Toast and Dialog Messages-->
     <string name="toast_edit_error_message">Only the original poster may edit this listing</string>
     <string name="external_storage_error">There was a problem accessing your device\'s external storage</string>
+    <string name="content_desc_button_divider">button divider</string>
+
+
     <!--Arrays-->
     <string-array name="category_array">
         <item>Choose a Category</item>
